cmake_minimum_required(VERSION 3.23)
project(project C)

set(CMAKE_C_STANDARD 99)


add_executable(seqList-static linear/sequencetable/seqList-static.c)
add_executable(seqList-dynamic linear/sequencetable/seqList-dynamic.c)

add_executable(SingleLinkedList linear/linkedlist/SingleLinkedList.c)
add_executable(SingleLinkedList-head linear/linkedlist/SingleLinkedList-head.c)
add_executable(DoubleLinkedList linear/linkedlist/doublelinkedlist/DoubleLinkedList-head.c)
add_executable(cycleLinkedList linear/linkedlist/doublelinkedlist/cycleSingleLinkedList.c)
add_executable(cycleDoubleLinkedList linear/linkedlist/doublelinkedlist/cycleDoubleLinkedList.c)
add_executable(StaticLinkedList linear/linkedlist/static-linkedlist/StaticLinkedList.c)
add_executable(StaticLinkedList-guess linear/linkedlist/static-linkedlist/StaticLinkedList-guess.c)
add_executable(question13 linear/linkedlist/application-questions/question13.c)
add_executable(question2 linear/linkedlist/application-questions/question2-reverse.c)
add_executable(question1-DeleteMin linear/linkedlist/application-questions/question1-DeleteMin.c)
add_executable(question3-DeleteAllSame linear/linkedlist/application-questions/question3-DeleteAllSame.c)
add_executable(question4-DeleteBetween linear/linkedlist/application-questions/question4-OrderlyDeleteBetween.c)
add_executable(question5-DeleteBetween2 linear/linkedlist/application-questions/question5-DeleteBetween.c)
add_executable(question6-DuplicateRemoval linear/linkedlist/application-questions/question6-DuplicateRemoval.c)
add_executable(question7-Merge linear/linkedlist/application-questions/question7-Merge.c)
add_executable(question8-ReverseLinkedListInArray linear/linkedlist/application-questions/question8-ReverseLinkedListInArray.c)
add_executable(question9-SearchExchangeInsert linear/linkedlist/application-questions/question9-SearchExchangeInsert.c)
add_executable(question10-CircularLeftShift linear/linkedlist/application-questions/question10-CircularLeftShift.c)
add_executable(question11-median linear/linkedlist/application-questions/question11-median.c)
add_executable(SequenceStack-SqStack stack/sequence-stack/SequenceStack-SqStack.c)
add_executable(SharingStack stack/sequence-stack/SharingStack.c)
add_executable(LinkedStack stack/link-stack/LinkedStack.c)
add_executable(LinkedStack-head stack/link-stack/LinkedStack-head.c)
add_executable(SqQueue queue/sequence-queue/SqQueue.c)
add_executable(SqQueue-size queue/sequence-queue/SqQueue-size.c)
add_executable(SqQueue-tag queue/sequence-queue/SqQueue-tag.c)
add_executable(LinkedQueue queue/linked-queue/LinkedQueue.c)
add_executable(LinkedQueue-head queue/linked-queue/LinkedQueue-head.c)
add_executable(question12-Majority linear/linkedlist/application-questions/question12-Majority.c)
add_executable(parenthesis-matching stack/application/parenthesis-matching.c)
add_executable(parenthesis-matching2 stack/application/parenthesis-matching2.c)
add_executable(Factorial stack/recursion/Factorial.c)
add_executable(Fib stack/recursion/Fib.c)